Fix regression bug 223394 -- percent-height replaced inlines that only have auto-height ancestors should get intrinsic height instead of 0, even in quirks mode.  r+sr=roc, a=asa